--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BachelorproefBlazorScanner.Client
 @using BachelorproefBlazorScanner.Client.Shared
+@using BachelorproefBlazorScanner.Shared.Scans
