Move scanner to component

--- a/Client/Components/ScanItem.razor
+++ b/Client/Components/ScanItem.razor
@@ -9,5 +9,5 @@
 </div>
 
 @code {
-    [Parameter, EditorRequired] public Scan Scan { get; set; } = default!;
+    [Parameter] public Scan Scan { get; set; } = default!;
 }
